# fortran-NeuralNetwork

./: CMakeLists.txt  README.md
src/: kalmanFilter.f90  neuralNetworks.f90  nnTest.f90  precision.f90  util.f90
